# service/api/api-handler.go
@@ -8,41 +8,45 @@ import (
 // Handler returns an instance of httprouter.Router that handle APIs registered here
 func (rt *_router) Handler() http.Handler {
 
+	var r = rt.router
+
 	// Generic routes
-	rt.router.GET("/", rt.getAppInfo)
-	rt.router.GET("/liveness", rt.liveness)
+	r.GET("/", rt.getAppInfo)
+	r.GET("/liveness", rt.liveness)
 
 	// Session routes
-	rt.router.POST("/doLogin", rt.wrap(rt.doLogin))
+	r.POST("/doLogin", rt.wrap(rt.doLogin))
 
 	// User routes
-	rt.router.GET("/users/:user_uuid", rt.wrap(rt.getUserProfile))
-	rt.router.POST("/me/change_username", rt.wrap(rt.setMyUserName))
+	r.GET("/users/:user_uuid", rt.wrap(rt.getUserProfile))
+	r.POST("/me/change_username", rt.wrap(rt.setMyUserName))
 
 	// Post routes
-	rt.router.GET("/me/feed", rt.wrap(rt.getMyStream))
-	rt.router.GET("/users/:user_uuid/feed", rt.wrap(rt.getUserFeed))
-	rt.router.GET("/users/:user_uuid/feed/:post_uuid", rt.wrap(rt.getUserPost))
+	r.GET("/me/feed", rt.wrap(rt.getMyStream))
+	r.PUT("/me/feed", rt.wrap(rt.addPost))
+	r.GET("/users/:user_uuid/feed", rt.wrap(rt.getUserFeed))
+	r.GET("/users/:user_uuid/feed/:post_uuid", rt.wrap(rt.getUserPost))
+	r.GET("/users/:user_uuid/feed/:post_uuid/webp", rt.wrap(rt.getPostImage))
 
 	// Comment routes
-	rt.router.GET("/users/:user_uuid/feed/:post_uuid/comments", rt.wrap(rt.getUserPostComments))
-	rt.router.PUT("/users/:user_uuid/feed/:post_uuid/comments", rt.wrap(rt.addUserPostComment))
-	rt.router.DELETE("/users/:user_uuid/feed/:post_uuid/comments/:comment_uuid", rt.wrap(rt.removeUserPostComment))
+	r.GET("/users/:user_uuid/feed/:post_uuid/comments", rt.wrap(rt.getUserPostComments))
+	r.PUT("/users/:user_uuid/feed/:post_uuid/comments", rt.wrap(rt.addUserPostComment))
+	r.DELETE("/users/:user_uuid/feed/:post_uuid/comments/:comment_uuid", rt.wrap(rt.removeUserPostComment))
 
-	// Comment routes
-	rt.router.GET("/users/:user_uuid/feed/:post_uuid/likes", rt.wrap(rt.getUserPostLikes))
-	rt.router.PUT("/users/:user_uuid/feed/:post_uuid/likes", rt.wrap(rt.addUserPostLike))
-	rt.router.DELETE("/users/:user_uuid/feed/:post_uuid/likes", rt.wrap(rt.removeUserPostLike))
+	// Likes routes
+	r.GET("/users/:user_uuid/feed/:post_uuid/likes", rt.wrap(rt.getUserPostLikes))
+	r.PUT("/users/:user_uuid/feed/:post_uuid/likes", rt.wrap(rt.addUserPostLike))
+	r.DELETE("/users/:user_uuid/feed/:post_uuid/likes", rt.wrap(rt.removeUserPostLike))
 
 	// Follow routes
-	rt.router.GET("/me/followed_users", rt.wrap(rt.getFollowedUsers))
-	rt.router.PUT("/me/followed_users/:user_uuid", rt.wrap(rt.followUser))
-	rt.router.DELETE("/me/followed_users/:user_uuid", rt.wrap(rt.unfollowUser))
+	r.GET("/me/followed_users", rt.wrap(rt.getFollowedUsers))
+	r.PUT("/me/followed_users/:user_uuid", rt.wrap(rt.followUser))
+	r.DELETE("/me/followed_users/:user_uuid", rt.wrap(rt.unfollowUser))
 
 	// Ban routes
-	rt.router.GET("/me/banned_users", rt.wrap(rt.getBannedUsers))
-	rt.router.PUT("/me/banned_users/:user_uuid", rt.wrap(rt.banUser))
-	rt.router.DELETE("/me/banned_users/:user_uuid", rt.wrap(rt.unbanUser))
+	r.GET("/me/banned_users", rt.wrap(rt.getBannedUsers))
+	r.PUT("/me/banned_users/:user_uuid", rt.wrap(rt.banUser))
+	r.DELETE("/me/banned_users/:user_uuid", rt.wrap(rt.unbanUser))
 
 	return rt.router
 }
